nfs-test.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - image: busybox
          name: busybox
          command:
            - sh
            - -c
            - 'while true; do date >> /mnt/$(hostname); sleep 0.1; done'
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
          volumeMounts:
            - name: busybox-nfs
              mountPath: /mnt
              subPath: busybox
      volumes:
      - name: busybox-nfs
        persistentVolumeClaim:
          claimName: busybox
