nfs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nfs-server
  namespace: lebleu-system
  labels:
    k8s-app: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nfs-server
  template:
    metadata:
      labels:
        k8s-app: nfs-server
    spec:
      containers:
        - name: nfs-server
          image: gcr.io/google-samples/nfs-server:1.1
          ports:
            - name: nfs
              containerPort: 2049
            - name: mountd
              containerPort: 20048
            - name: rpcbind
              containerPort: 111
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /exports
              name: nfs-server-volume
      volumes:
        - name: nfs-server-volume
          persistentVolumeClaim:
            claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: lebleu-system
  labels:
    k8s-app: nfs-server
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    k8s-app: nfs-server
