busy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - image: busybox
          name: busybox
          command:
            - sh
            - -c
            - 'while true; do date >> /mnt/$(hostname); sleep 0.1; done'
          resources:
            limits:
              cpu: 50m
              memory: 20Mi
            requests:
              cpu: 20m
              memory: 10Mi
          volumeMounts:
            - name: busybox-nfs
              mountPath: /mnt
              subPath: busybox
      volumes:
      - name: busybox-nfs
        persistentVolumeClaim:
          claimName: hello1-perl
---
apiVersion: v1
kind: Service
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: busybox
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: busybox
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app: busybox
spec:
  rules:
    - host: busybox.gcp.lebleu.co
      http:
        paths:
          - backend:
              serviceName: busybox
              servicePort: 80
