hello-perl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-perl
  labels:
    app: hello-perl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-perl
  template:
    metadata:
      labels:
        app: hello-perl
    spec:
      containers:
        - image: mgrenier/apache-perl
          name: site
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
              name: hello-perl
          volumeMounts:
            - name: hello-perl-nfs
              mountPath: /var/www/html/
              subPath: public_html
        - image: atmoz/sftp
          name: ftp
          ports:
            - containerPort: 22
              name: sftp
          args:
            - "hello:perl::0:0"
          volumeMounts:
            - name: hello-perl-nfs
              mountPath: /home/hello/share
              subPath: public_html
      volumes:
        - name: hello-perl-nfs
          persistentVolumeClaim:
            claimName: hello-perl
---
apiVersion: v1
kind: Service
metadata:
  name: hello-perl
  labels:
    app: hello-perl
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: hello-perl
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-perl
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: hello-perl
spec:
  rules:
    - host: hello-perl.gcp.lebleu.co
      http:
        paths:
          - backend:
              serviceName: hello-perl
              servicePort: 80
