traefik.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: lebleu-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-conf
        - name: acme
          hostPath:
            path: /tmp/traefik/acme
      containers:
        - image: traefik
          name: traefik-ingress-lb
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /acme
              name: acme
          args:
          - --configfile=/config/traefik.toml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-lb
  namespace: lebleu-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    k8s-app: traefik-ingress-lb
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: lebleu-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  type: ClusterIP
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: lebleu-system
  annotations:
    k8s-app: traefik-ingress-lb
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.gcp.lebleu.co
      http:
        paths:
          - backend:
              serviceName: traefik-web-ui
              servicePort: 80
